# corelink

./: .gitignore  Cargo.toml  README.md
core/: Cargo.toml
core/src/: consensus.rs  crypto.rs  file.rs  identity.rs  lib.rs  message.rs  network.rs  protocol.rs  storage.rs
core/tests/: identity_test.rs
node/: Cargo.toml
node/src/: api.rs  file_transfer.rs  main.rs  messaging_behaviour.rs  protocol_handler.rs  websocket.rs
simulator/: Cargo.toml
simulator/src/: main.rs
storage/uploads/: test.txt
web/: Cargo.toml  Trunk.toml  index.html  style.css
web/src/: lib.rs  main.rs
web/src/hooks/: mod.rs  use_api.rs  use_websocket.rs
