[workspace]
members = [
    "core",
    "node", 
    "simulator",
    "web"
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
libp2p = { version = "0.53" }
libp2p-tcp = { version = "0.41", features = ["tokio"] }
libp2p-mdns = { version = "0.45", features = ["tokio"] }
libp2p-noise = "0.44"
libp2p-yamux = "0.45"
libp2p-swarm = { version = "0.44", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
blake3 = "1.5"
ed25519-dalek = "2.1"
hex = "0.4"
rand = "0.8"
thiserror = "1.0"