[package]
name = "corelink-node"
version = "0.1.0"
edition = "2021"

[dependencies]
corelink-core = { path = "../core" }
tokio = { workspace = true }
libp2p = { workspace = true }
libp2p-tcp = { workspace = true }
libp2p-mdns = { workspace = true }
libp2p-noise = { workspace = true }
libp2p-yamux = { workspace = true }
libp2p-swarm = { workspace = true }
libp2p-core = "0.41"
libp2p-identity = "0.2"
libp2p-ping = "0.44"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4.4", features = ["derive"] }
futures = "0.3"