[package]
name = "corelink-node"
version = "0.1.0"
edition = "2021"

[dependencies]
corelink-core = { path = "../core" }
tokio = { version = "1.40", features = ["full"] }
libp2p = { version = "0.53", features = [
    "tcp",
    "noise",
    "yamux",
    "mdns",
    "identify",
    "ping",
    "macros",
    "tokio",
] }
libp2p-core = "0.41"
libp2p-swarm = "0.44"
libp2p-identity = "0.2"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
futures-util = "0.3"
ed25519-dalek = "2.1"
lru = "0.12"
tokio-tungstenite = "0.24"

[dev-dependencies]
tempfile = "3.0"